# HZBOC_TEST

./: CMakeLists.txt  CommonMacros.txt
Demo/: CMakeLists.txt  CommonMacros.txt  ProjectConfig.h.in
Demo/src/: ProjectConfig.h  camera.h  main.cpp  modelLoader.h  shader.h
resource/: DepthReduce.comp  HizCulling.comp  Present.frag  Present.vert
resource/Shaders/: HizCulling.comp  OfflineRender.frag  OfflineRender.vert
